--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,103 @@
+baseurl = "https://symphonyoss.github.io/Integrations-Docs"
 languageCode = "en-us"
-title = "My New Hugo Site"
-baseurl = "http://example.org/"
-theme = "beg"
+title = "Symphony Integrations official documentation"
+theme = "material"
+metadataformat = "yaml"
+canonifyurls = true
+# Enable Google Analytics by entering your tracking id
+googleAnalytics = ""
+
+[params]
+	# General information
+	author = "Symphony LLC"
+	description = "Symphony Integrations documentation."
+	copyright = "Released under the Apache 2.0 license"
+
+	# Repository
+	provider = "GitHub"
+	# repo_url = "https://github.com/symphonyoss/Integrations-Docs"
+	# repo_url = "https://github.com/maoo/hugo-test"
+
+	# version = "0.9.0"
+	logo = "/SymphonyLlcSymbol.png"
+	favicon = ""
+
+	permalink = "#"
+
+	# Custom assets
+	custom_css = []
+	custom_js  = []
+
+	# Syntax highlighting theme
+	highlight_css  = ""
+
+	[params.palette]
+    	primary = "grey"
+    	accent  = "teal"
+
+    [params.font]
+    	text = "Ubuntu"
+    	code = "Ubuntu Mono"
+
+
+[social]
+	twitter = "symphonyOSS"
+	github  = "symphonyoss"
+	# email   = "infra@symphony.foundation"
+
+[[menu.main]]
+	name   = "Welcome"
+	url    = "/"
+	weight = 10
+
+[[menu.main]]
+	name   = "Architecture"
+	url    = "architecture/"
+	weight = 20
+
+[[menu.main]]
+	name   = "Integrations"
+	url    = "integrations/"
+	identifier = "integrations"
+	weight = 30
+
+[[menu.main]]
+	name   = "Github"
+	url    = "integrations/github"
+	parent = "integrations"
+	weight = 10
+
+[[menu.main]]
+	name   = "JIRA"
+	url    = "integrations/jira"
+	parent = "integrations"
+	weight = 20
+
+[[menu.main]]
+	name   = "Trello"
+	url    = "integrations/trello"
+	parent = "integrations"
+	weight = 30
+
+[[menu.main]]
+	name   = "Salesforce"
+	url    = "integrations/salesforce"
+	parent = "integrations"
+	weight = 40
+
+[[menu.main]]
+	name   = "Universal"
+	url    = "integrations/universal"
+	parent = "integrations"
+	weight = 50
+
+[[menu.main]]
+	name   = "Zapier"
+	url    = "integrations/zapier"
+	parent = "integrations"
+	weight = 60
+
+[[menu.main]]
+	name   = "Build your own"
+	url    = "quickstart/"
+	weight = 40
