--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,12 @@
-baseurl = "https://symphonyoss.github.io/Integrations-Docs"
+# baseurl = "https://symphonyoss.github.io/Integrations-Docs"
+baseurl = "http://blog.session.it/hugo-test"
+
 languageCode = "en-us"
 title = "Symphony Integrations official documentation"
 theme = "material"
 metadataformat = "yaml"
 canonifyurls = true
+
 # Enable Google Analytics by entering your tracking id
 googleAnalytics = ""
 
