--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/material"]
 	path = themes/material
-	url = git@github.com:digitalcraftsman/hugo-material-docs.git
+	url = https://github.com/digitalcraftsman/hugo-material-docs.git
