--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,7 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-before_install:
-  - sudo apt-get install -y hugo
+before_install: "wget https://github.com/spf13/hugo/releases/download/v0.22/hugo_0.22_amd64.deb ; sudo dpkg -i hugo*.deb ; hugo version"
 
 install: true
 
